<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    tools:context="com.example.gosu.wepathit.WaitingForOtpActivity"
    tools:showIn="@layout/activity_waiting_for_otp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/auto_rickshaw"
        android:scaleType="centerCrop"
        android:contentDescription="@string/theme_image" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView android:text="@string/registering_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/informationTextView"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <ProgressBar
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/registrationProgressBar"
            />
        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="#80000000"
            android:id="@+id/relativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/mobile_no"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/tvName"
                android:gravity="center"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="20sp"
                android:textSize="20sp"
                android:textColor="@color/colorIcons"
                android:id="@+id/etMobile"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMobile"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/otp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:id="@+id/tvOtp"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etOtp"
                android:textSize="20sp"
                android:textColor="@color/colorIcons"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/tvOtp"
                />
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/colorAccent"
                android:layout_below="@+id/etOtp"
                android:layout_centerInParent="true"
                android:gravity="center"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
