<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    tools:context="com.example.gosu.wepathit.WaitingForRideActivity"
    tools:showIn="@layout/activity_waiting_for_ride">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/auto_rickshaw"
        android:scaleType="centerCrop"
        android:contentDescription="@string/theme_image" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="top">
        <TextView
            android:id="@+id/RideDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/detail"
            android:layout_marginBottom="5dp"
            />
        <LinearLayout
            android:id="@+id/LayoutDescName"
            android:layout_below="@id/RideDetail"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:background="#90000000">
            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/driverName"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tvDriver"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:textColor="@color/colorIcons"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:gravity="left"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LayoutDescMobile"
            android:layout_below="@id/LayoutDescName"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:background="#90000000">
            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mobileNo"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tvDriverMob"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:textColor="@color/colorIcons"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:gravity="left"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LayoutDescAutoRegNo"
            android:layout_below="@id/LayoutDescMobile"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:background="#90000000">
            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/autoNo"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tvAutoRegNo"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:textColor="@color/colorIcons"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:gravity="left"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LayoutPreConfirm"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/LayoutDescAutoRegNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#80000000"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="40">
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.80"
                    android:src="@mipmap/ic_action_call" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:padding="5dp"
                android:orientation="vertical">
                <Button
                    android:layout_gravity="center"
                    android:id="@+id/btnCancel"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_cancel_ride"
                    android:background="@color/colorAccent"
                    android:textStyle="bold"
                    android:alpha="0.80"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_gravity="center"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_confirm_ride"
                    android:background="@color/colorAccent"
                    android:alpha="0.80"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutPostConfirm"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/LayoutDescAutoRegNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:background="#80000000"
            android:orientation="horizontal"
            android:visibility="gone">
            <Button
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/btnRideStart"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_start_ride"
                android:background="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
